--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.29",
     "expo-status-bar": "~1.12.1",
